<resources>
    <string name="app_name">TAP Staff</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="application_logo_description">application logo</string>
    <string name="image_of_train_ticket">image of train ticket</string>
    <string name="image_of_user">image of user</string>
    <string name="picture_of_user">picture of user</string>
    <string name="name">Name</string>
    <string name="_3">3</string>
    <string name="e384">E384</string>
    <string name="image_logo">image logo</string>
    <string name="train_logo">train logo</string>
    <string name="image_icon_of_phone">image icon of phone</string>
    <string name="shay_de_barra">Shay de Barra</string>
    <string name="arriving_or_departing_from">arriving_or_departing_from</string>
    <string name="train_id">Train ID:</string>
    <string name="direction">Direction</string>
    <string name="icon_image">icon image</string>
    <string name="notification_text">You have client changes for review</string>
    <string name="location_granted">Location Granted:</string>
    <string name="location_button">location button</string>
    <string name="channel_description">Monitoring channel for Tap Staff application</string>
    <string name="greystones_to_malahide">eujcInv~c@_@ZUPmCpCqC|DwBnDkAxBwEtHyFtGeF|D{FrDcBxA{BfCuAjB{AhC{FtLqBxCsC`DiBzA_B~@gBx@wCv@}EnAgPjDoPpDqDH{Fk@sHoAgE{@oI{CaI{D_C}AkB_BoAy@sAm@gCi@oBK_A@kA\\}ClAmDdAmDb@qIXsBd@o@\\kFnEs@d@u@RuBd@{CRuDGyCAa@FaCT{Dz@aD~@yB~@wBzAkB|AoCfDwAnCaAhCeEtJqCnGuAtDeAvDcA`H[lDU`FWjKm@hFmA~EkAnC{@vAgApAmA`AmBjA_ExBg@ZeDhBgHhEyF`DmFvCoE~BwEvC_ClAiEpBeHvBqC|@gChAsBpA}BhBsHzHkEtDcBbAqFzBiWdImz@zWad@rN}DbAALeC\\_FVcF?}QM{CQwAU{Bk@eDuA}FaE{F_EeEgBgEy@oFY_Mg@yFe@wF[sFM_EYeDg@}Bk@cEgB}AaAyBgBcFgFgFmE_JuFsAsAiAcBs@_BgAuDuC_KkBcIqCkLyAaFaAgC}AeCgAcA_B}@oA_@u@JiC~@}AdA}A`ByAtB}A|CiA~CiAhEkCxOqDdVyAlJiBlKqHl_@uJzd@uCfN}@`DsAtCy@lAmAlAgC|A{A^oBJoDBuBAkCK_AQeAa@wCkAg@MiAEuANqAf@yAjAgCrCqBbCiFvHgChEiAjCmBnFsD~JoAxEy@hEe@tDe@hICbGFdEfCff@f@dO?zEUxGg@`Gu@nF_BxH_Jl\\_EnP}AbIsGxa@uDvTsDbPuDxM{Mtc@kJnZaDnIyDtIaAnBaFbJoM~ToS|]sMbUuJdPe[xd@_QpVwUv\\mFxHyDpFgOjTmB~CcB|C{CtGaChGw@nCmAjDcE|K}B|HgCzJ_@hAaBdIcDzTk@bCg@|AoA`CyDxEwBfCsAjB}AbBmAv@y@\\yATcADqBUuBaAmAqA_BcCyB_FiEeKeAuDo@_ESiAo@yB}AmEcAmDwA{CiCcGeC_G}A}Eq@uB}@wBmEqKmL{X{q@iaBaGoNwDgKgC}IkEaTsBaKaD_NuAwEsB_GgEgLqKkYqCgImC_K_BkIeA_H_BgNgI}{@yAyMkA{HeAwFeDsN_EwMwDwJaFcKkD_GCHg@w@oMuRyAuBmFeI}FiIaDmDuBmB_GgEuC_BaCeAiEqAmQiDaKgBmCYkDK_DDeGb@wXnDiYtDak@lHa{ApR_r@xIkCP{CBoCM{R{AcCS_@A</string>
    <string name="greystones_to_howth">sujcIzv~c@_@ZGDmCpCqC|DwBnDkAxBwEtHyFtGeF|D{FrDcBxA{BfCuAjB{AhC{FtLqBxCsC`DiBzA_B~@gBx@wCv@}EnAgPjDoPpDqDH{Fk@sHoAgE{@oI{CaI{D_C}AkB_BoAy@sAm@gCi@oBK_A@kA\\}ClAmDdAmDb@qIXsBd@o@\\kFnEs@d@u@RuBd@{CRuDGyCAa@FaCT{Dz@aD~@yB~@wBzAkB|AoCfDwAnCaAhCeEtJqCnGuAtDeAvDcA`H[lDU`FWjKm@hFmA~EkAnC{@vAgApAmA`AmBjA_ExBg@ZeDhBgHhEyF`DmFvCoE~BwEvC_ClAiEpBeHvBqC|@gChAsBpA}BhBsHzHkEtDcBbAqFzBiWdImz@zWad@rN}DbAALeC\\_FVcF?}QM{CQwAU{Bk@eDuA}FaE{F_EeEgBgEy@oFY_Mg@yFe@wF[sFM_EYeDg@}Bk@cEgB}AaAyBgBcFgFgFmE_JuFsAsAiAcBs@_BgAuDuC_KkBcIqCkLyAaFaAgC}AeCgAcA_B}@oA_@u@JiC~@}AdA}A`ByAtB}A|CiA~CiAhEkCxOqDdVyAlJiBlKqHl_@uJzd@uCfN}@`DsAtCy@lAmAlAgC|A{A^oBJoDBuBAkCK_AQeAa@wB_AgAYiAEuANqAf@yAjA{DnE{C~DuEdHeBnDaBlE_ErKiAtDoArFc@xCu@zIGxCB|HpArWpArWNdNUxGg@`Gu@nFu@|DoA~E_DtLyCrK_EnP}AbIsGxa@uDvTsDbPuDxMcFrPmL``@uDnLaDnI{FdMsMpUkXje@_Zng@aVd^_TpZcQtVaNxRmClDiNfS{CzEaFjJwD~IkBhGoDxJwBbGa@~AaD~LaAdD}AtI}CrSo@hC_A|B_AvAmBzB{CpDgCfD_BvAeAf@sA^qAHqAEcBa@iBoAiB_CcAsBiF{LcAiCe@cBu@{Du@{DeB}Ew@sCiAyCsCkGkCmG_BqEeBmFuEwKsHsQct@oeB}KkXwCuIyAoFsAmG}CaPcD{NaDoLwGyQqJoWaD}I{CeKeCyLsBoNeHcu@uBoTw@{GkA{HgDiPgCoJeEiM{E}K{E}IcA_BCHg@w@oMuRq@aAiC}DkC{DQWb@uA]yAc@iCs@wIGqFpAq_Af@}^HaKKaOi@of@g@_a@OaPRkVlAopAd@ge@Z}NvAmc@R_EfBcTjDia@\\eEFy@</string>
    <string name="junction_to_malahide">ezzdI`pqd@iMyQaDmDuBmBaCmB}ByAuC_BaCeA}Ai@kBg@cCi@iM_CqGmAoBYmCYkDK_DDeBH_DXiRdCmEh@iYtDySnC_~@jLaxA|QgM~AkCP{CBoCM{R{AoBO</string>


</resources>
