<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="@drawable/user_details_shape"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:contentDescription="@string/picture_of_user"
        android:scaleType="centerInside"
        android:src="@drawable/user_icon" />

    <LinearLayout
        android:id="@+id/vertical_text"
        android:layout_weight="1.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"

            android:text="@string/shay_de_barra"
            android:textColor="@color/buttonTextColor"
            android:textSize="18sp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/phoneIcon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:contentDescription="@string/image_icon_of_phone"
        android:scaleType="centerInside"
        android:src="@drawable/phone_sm" />

</LinearLayout>
