<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_grey"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/image_logo"
        android:padding="2dp"
        android:src="@drawable/tap_white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/train"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/train_logo"
            android:padding="2dp"
            android:src="@drawable/dart" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/e384"
            android:textAllCaps="true"
            android:textColor="@color/buttonTextColor"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/image_logo"
        android:padding="2dp"
        android:src="@drawable/tap_white" />
</RelativeLayout>